--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "seealso.doc.tar.xz": 96ce0502fa7f8b6bc809ae7146c467b93e0c3dd1
-  "seealso.source.tar.xz": b6f9395e9195c973f992a96ebbe97492e344866c
-  "seealso.tar.xz": 28d868267e7943de63106c8536a4a3bd67739642
+  seealso.doc.tar.xz: 32a5a6740890eb807fbd0cca5588e3075a816572
+  seealso.source.tar.xz: 747d9d502a9c369db7d72a2c13d15ad92282d05a
+  seealso.tar.xz: 7ea389866660ae67c0add7a302e488ad0b38a5f5
